Mejorada creacion de ventas